--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+com-core (0.0.3) unstable; urgency=low
+
+  * Git: slp/pkgs/c/com-core
+  * Tag: com-core_0.0.3
+
+ -- Sung-jae Park <nicesj.park@samsung.com>  Wed, 18 Jul 2012 16:37:44 +0900
+
 com-core (0.0.2) unstable; urgency=low
 
   * Git: slp/pkgs/c/com-core
