Strip the binary
Change-Id: I950b72b4a9a236cefa63361122a569ad0b6b2aed

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+com-core (0.0.4) unstable; urgency=low
+
+  * Git: slp/pkgs/c/com-core
+  * Tag: com-core_0.0.4
+
+ -- Sung-jae Park <nicesj.park@samsung.com>  Fri, 20 Jul 2012 10:07:33 +0900
+
 com-core (0.0.3) unstable; urgency=low
 
   * Git: slp/pkgs/c/com-core
