Handling the error case. for preventing the lock-up
Try to send/recv packet and check the time.
If it exceed the maximum waiting time,
Just stop and give up send/recv packet
And return false to handling it correctly by user.

Handling the exceptional case more hardly.

Decrease the timeout value to 2 secs from 10 secs

Change-Id: I4d78f471d1555c66b687e4979a7110b62325e7e6

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+com-core (0.1.0) unstable; urgency=low
+
+  * Git: slp/pkgs/c/com-core
+  * Tag: com-core_0.1.0
+
+ -- Sung-jae Park <nicesj.park@samsung.com>  Thu, 26 Jul 2012 14:15:08 +0900
+
 com-core (0.0.6) unstable; urgency=low
 
   * Git: slp/pkgs/c/com-core
