--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+com-core (0.2.0) unstable; urgency=low
+
+  * Git: slp/pkgs/c/com-core
+  * Tag: com-core_0.2.0
+
+ -- Sung-jae Park <nicesj.park@samsung.com>  Sun, 29 Jul 2012 08:46:23 +0900
+
 com-core (0.1.1) unstable; urgency=low
 
   * Git: slp/pkgs/c/com-core
