Update version for uploading this to Tizen OBS
Change-Id: Ic53d4e5a5c3ce347e383a3f8e6d8cacf52ddfef8

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+com-core (0.2.1) unstable; urgency=low
+
+  * Git: slp/pkgs/c/com-core
+  * Tag: com-core_0.2.1
+
+ -- Sung-jae Park <nicesj.park@samsung.com>  Tue, 14 Aug 2012 12:50:01 +0900
+
 com-core (0.2.0) unstable; urgency=low
 
   * Git: slp/pkgs/c/com-core
