--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+com-core (0.2.4) unstable; urgency=low
+
+  * Git: slp/pkgs/c/com-core
+  * Tag: com-core_0.2.4
+
+ -- Sung-jae Park <nicesj.park@samsung.com>  Thu, 20 Sep 2012 12:56:01 +0900
+
 com-core (0.2.3) unstable; urgency=low
 
   * Git: slp/pkgs/c/com-core
